# StrGraphCPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  user_operations.cpp
examples/: complete_workflow.py  python_example.py
include/strgraph/: compiled_graph.h  core_ops.h  cpp_operation_interface.h  executor.h  graph.h  node.h  operation_registry.h  strgraph.h
python/: test_frontend.py
python/strgraph/: __init__.py  backend.py  custom_ops.py  graph.py  hybrid_ops.py  ops.py
src/: compiled_graph.cpp  core_ops.cpp  cpp_operation_interface.cpp  executor.cpp  graph.cpp  operation_registry.cpp  python_bindings.cpp  strgraph.cpp
tests/: benchmark.cpp  main.cpp  test_python_bindings.py  test_python_full.py
